[package]
name = "psbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31.0", features = ["rand-std"] }
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

anyhow = { version = "1.0.79", features = ["default"] }
hex = { version = "0.4.3", features = ["default"] }
minicbor = { version = "0.20.0", features = ["alloc"] }